@@ -14,6 +14,10 @@
 
 """Tests for the help command."""
 
+from inspect import getdoc
+
+from testtools.matchers import Contains
+
 from testrepository.commands import help, load
 from testrepository.ui.model import UI
 from testrepository.tests import ResourcedTestCase
@@ -30,7 +34,18 @@ class TestCommand(ResourcedTestCase):
     def test_shows_rest_of__doc__(self):
         ui, cmd = self.get_test_ui_and_cmd(args=['load'])
         cmd.execute()
-        self.assertEqual([('rest', load.load.__doc__)], ui.outputs)
+        expected_doc = getdoc(load.load)
+        self.assertThat(ui.outputs[-1][1], Contains(expected_doc))
+
+    def test_shows_cmd_arguments(self):
+        ui, cmd = self.get_test_ui_and_cmd(args=['load'])
+        cmd.execute()
+        self.assertThat(ui.outputs[-1][1], Contains("streams*"))
+
+    def test_shows_cmd_partial(self):
+        ui, cmd = self.get_test_ui_and_cmd(args=['load'])
+        cmd.execute()
+        self.assertThat(ui.outputs[-1][1], Contains("--partial"))
 
     def test_shows_general_help_with_no_args(self):
         ui, cmd = self.get_test_ui_and_cmd()
